# sundry_study

./: !README.txt  .dockerignore  .env  .env.production  .eslintrc.cjs  .eslintrc.js  .gitignore  .pnp.cjs  .pnp.loader.mjs  .prettierrc  .project  .yarnrc.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  MIGRATION.md  README.ko.md  README.md  bartender_presentation.gs  build.fxbuild  build.txt  bun.lockb  chat.html  components.json  content.json  docker-compose.yaml  drizzle.config.ts  eslint.config.mjs  file.py  flash.py  flash.sh  flash_alternative.py  index.html  jsconfig.json  manifest.json  md5sum.txt  middleware.ts  nest-cli.json  (+18 more)
.github/: FUNDING.yml
CromePage/: styles.css
Dple_FurryFriendsCouple/: settings.gradle
Find_Similar_Colors/: croller.py  main.py
O.MG_Cable-Firmware/: omgtool.py
PoketmonTalk/: chat2.html  chats.html  find.html  friends.html  more.html
WIHI_HomePage/: README.md  nodemon.json  package-lock.json  package.json  webpack.config.js
actions/: themes.ts
airbnb-clone-backend/: pyproject.toml
airbnb-clone-backend/bookings/: models.py
airbnb-clone-backend/categories/: serializers.py
airbnb-clone-backend/experiences/: admin.py
airbnb-clone-backend/experiences/migrations/: 0001_initial.py  0003_alter_experience_category_alter_experience_host_and_more.py
airbnb-clone-backend/reviews/: serializers.py
airbnb-clone-backend/rooms/: serializers.py  urls.py
airbnb-clone-backend/rooms/migrations/: 0005_alter_room_amenities_alter_room_category_and_more.py
airbnb-clone-backend/users/: serializers.py
app/: page.tsx  (+4 more)
(+2088 files in other folders)
